--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="./css/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-A-Sketch</title>
 </head>
 <body>
-    
+    <div class="canvas-container">
+        <h1>Etch-A-Sketch</h1>
+        <canvas width="1800" height="1200" id="canvas-board"></canvas>
+    </div>
 </body>
 </html>
