added randomised starting point to start drawing a sketch

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
         <h1>Etch-A-Sketch</h1>
         <canvas width="1800" height="1200" id="canvas-board"></canvas>
     </div>
+
+    <script type="text/javascript" src="script/script.js"></script>
 </body>
 </html>
