added boundary checking, added downloa functionality

--- a/index.html
+++ b/index.html
@@ -7,9 +7,24 @@
     <title>Etch-A-Sketch</title>
 </head>
 <body>
-    <div class="canvas-container">
-        <h1>Etch-A-Sketch</h1>
-        <canvas width="1800" height="1200" id="canvas-board"></canvas>
+    <h1 class="title-of-the-page">Etch-A-Sketch</h1>
+    <div class="instructions">Press ➡,⬇,⬅,⬆ to draw </div>
+        <div class="container"> 
+            <div class="canvas-container"> 
+                <canvas width="1800" height="1200" id="canvas-board">
+
+                </canvas>
+                <div class="interactions">
+                    <button class="reset button">
+                        Erase
+                    </button>
+                    <a href="#" class="download">
+                        Download
+                    </a>
+                </div>
+                
+            </div>
+        </div>
     </div>
 
     <script type="text/javascript" src="script/script.js"></script>
