added arrow symbols

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1 class="title-of-the-page">Etch-A-Sketch</h1>
-    <div class="instructions">Press the arrow keys to draw </div>
+    <div class="instructions">Use &#8592;  &#8593; &#8595;  &#8594; to draw </div>
         <div class="container"> 
             <div class="canvas-container"> 
                 <canvas width="1800" height="1000" id="canvas-board">
